v2.39: Full JDK16 support, class writer fixes for resolving generated types
Static fields could not be set on JDK16, now they can, with tests to confirm it.
Classes generated using the ExtendedClassWriter can now be referenced inside other generated methods.
Added some helpful utilities to the extended class writer.